Implementation of Whatsapp labels management
