# src/whatsapp/controllers/instance.controller.ts
@@ -151,6 +151,8 @@ export class InstanceController {
               'GROUP_UPDATE',
               'GROUP_PARTICIPANTS_UPDATE',
               'CONNECTION_UPDATE',
+              'LABELS_EDIT',
+              'LABELS_ASSOCIATION',
               'CALL',
               'NEW_JWT_TOKEN',
               'TYPEBOT_START',
@@ -201,6 +203,8 @@ export class InstanceController {
               'GROUP_UPDATE',
               'GROUP_PARTICIPANTS_UPDATE',
               'CONNECTION_UPDATE',
+              'LABELS_EDIT',
+              'LABELS_ASSOCIATION',
               'CALL',
               'NEW_JWT_TOKEN',
               'TYPEBOT_START',
@@ -248,6 +252,8 @@ export class InstanceController {
               'GROUP_UPDATE',
               'GROUP_PARTICIPANTS_UPDATE',
               'CONNECTION_UPDATE',
+              'LABELS_EDIT',
+              'LABELS_ASSOCIATION',
               'CALL',
               'NEW_JWT_TOKEN',
               'TYPEBOT_START',
@@ -295,6 +301,8 @@ export class InstanceController {
               'GROUP_UPDATE',
               'GROUP_PARTICIPANTS_UPDATE',
               'CONNECTION_UPDATE',
+              'LABELS_EDIT',
+              'LABELS_ASSOCIATION',
               'CALL',
               'NEW_JWT_TOKEN',
               'TYPEBOT_START',
