# src/whatsapp/controllers/websocket.controller.ts
@@ -38,6 +38,8 @@ export class WebsocketController {
         'GROUP_UPDATE',
         'GROUP_PARTICIPANTS_UPDATE',
         'CONNECTION_UPDATE',
+        'LABELS_EDIT',
+        'LABELS_ASSOCIATION',
         'CALL',
         'NEW_JWT_TOKEN',
         'TYPEBOT_START',
